--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -45,6 +45,85 @@
                 </div>
             </div>
         </section>
+
+        <!-- Quote -->
+        <section>
+            <div>
+                <img src="quote-image.png" alt="Smiling person">
+                <div>
+                    <blockquote>
+                        "Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!"
+                    </blockquote>
+                    <p>Person Name</p>
+                    <p>Weather Presenter</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Videos -->
+        <section>
+            <h1>Most Popular Tutorials</h1>
+            <div>
+                <div>
+                    <img src="video1.png" alt="Video 1">
+                    <h2>Diagonal Smile</h2>
+                    <p>Learn how to perfect your diagonal smile with this tutorial.</p>
+                    <div>
+                        <img src="author1.png" alt="Author 1">
+                        <h3>Philip Massey</h3>
+                        <div>
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <img src="star.png" alt="Star">
+                            <p>5/5</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Membership -->
+        <section>
+            <h1>Free Membership</h1>
+            <div>
+                <div>
+                    <img src="feature1.png" alt="Feature 1">
+                    <h2>Lorem Ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+            <button>Register for Free</button>
+        </section>
+
+        <!-- FAQ -->
+        <section>
+            <h1>FAQ</h1>
+            <div>
+                <div>
+                    <h2>How does this work?</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div>
+                    <h2>How can I register?</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <!-- Footer -->
+    <footer>
+        <div>
+            <img src="logo-footer.png" alt="Footer Logo">
+            <p>© Smile School 2023</p>
+            <div>
+                <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="instagram.png" alt="Instagram"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
